# el_boana

./: CMakeLists.txt
C/: AB.C  DATA.C  EVAL.C  FEATURE.C  INIT.C  INTRFACE.C  MOVE.C  SEARCH.C  SYSDEPT.C  VGA.C  graph.c  mouse.c
DOC/: ELBGAMES.DOC  EVAL.DOC  RULES.DOC  SEARCH.DOC
H/: DATA.H  EVAL.H  INTRFACE.H  SEARCH.H  SYSDEPT.H  VGA.H  graph.h  mouse.h
O/: MAKEFILE
c/: init.c  mouse.c  move.c  sysdept.c  tables.c  vga.c
doc/: ab.doc  paper.doc  results.doc
h/: ab.h  init.h  move.h  tables.h
